Fixed the compilation. Now compiles and runs.
Differentiated the durations of new and old types of insulin (old types renamed according to medical definitions).
Added a page for Settings, with the UI for changing the duraqtion of the . The UI isn't currently connected to ANY form o calculations..
Addad a PhysicalActivityPage, that currently is NOT in the MAUI project.
Added MAUI icon in MAUI resources, but currently not used.
Added InsulinDrug class, although currently not used.
Changed enums: TypeOfGlucoseMeasurementDevice, TypeOfGlucoseMeasurement. TypeOfInsulinSpeed

--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -15,7 +15,7 @@
 		<ApplicationTitle>GlucoMan.Maui</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.glucoman.maui</ApplicationId>
+		<ApplicationId>it.ingmonti.glucoman.maui</ApplicationId>
 		<ApplicationIdGuid>30939246-cae7-40ff-92ce-a308f5c8b0e8</ApplicationIdGuid>
 
 		<!-- Versions -->
@@ -170,6 +170,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="MiscellaneousFunctionsPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="SettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="ShowTextPage.xaml">
