--- a/GlucoMan.Forms/GlucoMan.Forms.csproj
+++ b/GlucoMan.Forms/GlucoMan.Forms.csproj
@@ -8,8 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>Current_Icon_White.ico</ApplicationIcon>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
-    <AssemblyVersion></AssemblyVersion>
-    <FileVersion></FileVersion>
+    <AssemblyVersion>0.7.4</AssemblyVersion>
+    <FileVersion>0.7.4</FileVersion>
     <NeutralLanguage>en-001</NeutralLanguage>
     <PackageIcon>gamon LegoLogo scritta con piastra bianca 256x256.png</PackageIcon>
     <Authors>Ing.Gabriele Monti - Forlì - Italia</Authors>
