--- a/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
+++ b/GlucoMan.Mobile/GlucoMan.Mobile/GlucoMan.Mobile.csproj
@@ -6,7 +6,7 @@
     <AssemblyName>GlucoMan</AssemblyName>
     <ApplicationIcon>Current_Icon_White.ico</ApplicationIcon>
     <PackageId>GlucoMan</PackageId>
-    <Version>0.7.3.4</Version>
+    <Version>0.7.4</Version>
     <NeutralLanguage>en</NeutralLanguage>
     <PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
     <Authors>Ing.Gabriele MONTI - Forlì - Italia</Authors>
@@ -16,6 +16,8 @@
     <Company>ingmonti.it</Company>
     <Title>GlucoMan, Glucose Management for diabetics</Title>
     <Description>GlucoMan, Glucose Management for diabetics</Description>
+    <AssemblyVersion>0.7.4</AssemblyVersion>
+    <FileVersion>0.7.4</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
