Added and integrated objects and a minimum code for Recipes management
Added classes Recipe.cs and RecipeIngredient
Added pages RecipesPage and RecipePage
Added stub of DataLayer for Recipes in file SqLite_Recipes.cs (currently the fields are not present in the database file), added file BL_Recipes.cs of Business Layer.
Some minor name refactorings on Alarms part (currently not finished)
Cured a datase access errore in SqLite_MealAndFood.cs

--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -187,6 +187,12 @@
 	  <MauiXaml Update="MiscellaneousFunctionsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="RecipePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="RecipesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="SensorsPicturePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
