--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -41,6 +41,56 @@
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 		<AssemblyName>GlucoMan</AssemblyName>
+		<Authors>Ing. Gabriele Monti - Forlì - Italia</Authors>
+		<PackageLicenseExpression>GPL-2.0-or-later</PackageLicenseExpression>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-android|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-ios|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-maccatalyst|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-windows10.0.19041.0|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-android|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-ios|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-maccatalyst|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-windows10.0.19041.0|AnyCPU'">
+	  <ApplicationTitle>GlucoMan</ApplicationTitle>
+	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
+	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -139,6 +189,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="CalculatorPage.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ClickableImagePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
