Storage of external files works! (at least in one telephone)
Some little modifications to the UI
Icon and splash screen
  splash screen is good enough, icon is badly cropped because is circular
Version of program changed to 0.9.0
CalculatorPage: completed functionality, slight improvements in UI
  added calculator linking image in three pages (just one works)

--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst</TargetFrameworks>
+		<TargetFrameworks>net9.0-android;net9.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net9.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
 		<!-- <TargetFrameworks>$(TargetFrameworks);net9.0-tizen</TargetFrameworks> -->
@@ -42,63 +42,77 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 		<AssemblyName>GlucoMan</AssemblyName>
 		<Authors>Ing. Gabriele Monti - Forlì - Italia</Authors>
-		<PackageLicenseExpression>GPL-2.0-or-later</PackageLicenseExpression>
+		<PackageLicenseExpression>GPL-2.0-only</PackageLicenseExpression>
+		<Title>GlucoMan: Glucose Manager for diabetics</Title>
+		<Description>GlucoMan, Glucose Management for diabetics</Description>
+		<Copyright>Copyleft GPL v.2</Copyright>
+		<PackageProjectUrl>www.ingmonti.it/GlucoMan</PackageProjectUrl>
+		<PackageIcon>appicon.png</PackageIcon>
+		<RepositoryUrl>https://github.com/gamondue/GlucoProgs</RepositoryUrl>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-android|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-ios|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-maccatalyst|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0-windows10.0.19041.0|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-android|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-ios|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-maccatalyst|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0-windows10.0.19041.0|AnyCPU'">
 	  <ApplicationTitle>GlucoMan</ApplicationTitle>
 	  <ApplicationId>it.ingmonti.glucoman</ApplicationId>
-	  <ApplicationDisplayVersion>0.5.0</ApplicationDisplayVersion>
+	  <ApplicationDisplayVersion>0.9.0</ApplicationDisplayVersion>
+	  <Deterministic>False</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\appicon.svg"/>
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\AppIcon\appicon.svg" Color="#7dbff3" BaseSize="128,128" />
 
 		<!-- Images -->
 
@@ -127,6 +141,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\AppIcon\appiconfg.svg" />
+	  <None Remove="Resources\AppIcon\appiconfg_gamon.svg" />
+	  <None Remove="Resources\AppIcon\appiconfg_net.svg" />
 	  <None Remove="Resources\Images\arms_back.png" />
 	  <None Remove="Resources\Images\back.png" />
 	  <None Remove="Resources\Images\calculate_insulin.png" />
@@ -186,6 +203,21 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="9.0.50" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.3" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.11" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
