--- a/GlucoMan.Maui/Platforms/Android/AndroidManifest.xml
+++ b/GlucoMan.Maui/Platforms/Android/AndroidManifest.xml
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true"></application>
+  <application
+    allowBackup="true"
+    android:icon="@mipmap/appicon"
+    android:roundIcon="@mipmap/appicon"
+    android:supportsRtl="true">
+  </application>
   <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-  <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
   <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
   <uses-permission android:name="android.permission.MANAGE_DOCUMENTS" />
+  <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
 </manifest>
