--- a/GlucoMan.Maui/GlucoMan.Maui.csproj
+++ b/GlucoMan.Maui/GlucoMan.Maui.csproj
@@ -113,6 +113,7 @@
 	<ItemGroup>
 		<!-- App Icon -->
 		<MauiIcon Include="Resources\AppIcon\appicon.svg" />
+		<MauiImage Include="Resources\Images\escape.png" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\AppIcon\appicon.svg" Color="#7dbff3" BaseSize="128,128" />
@@ -149,12 +150,22 @@
 	  <None Remove="Resources\AppIcon\appiconfg_net.svg" />
 	  <None Remove="Resources\Images\arms_back.png" />
 	  <None Remove="Resources\Images\back.png" />
+	  <None Remove="Resources\Images\balance.png" />
 	  <None Remove="Resources\Images\calculate_insulin.png" />
 	  <None Remove="Resources\Images\calculate_insulin.svg" />
 	  <None Remove="Resources\Images\calculator.png" />
 	  <None Remove="Resources\Images\calculator.svg" />
 	  <None Remove="Resources\Images\chart.png" />
 	  <None Remove="Resources\Images\chart.svg" />
+	  <None Remove="Resources\Images\choose.png" />
+	  <None Remove="Resources\Images\Chronograph_Set.png" />
+	  <None Remove="Resources\Images\Chronograph_Started.png" />
+	  <None Remove="Resources\Images\clear_fields.png" />
+	  <None Remove="Resources\Images\clock.png" />
+	  <None Remove="Resources\Images\detail.png" />
+	  <None Remove="Resources\Images\details.png" />
+	  <None Remove="Resources\Images\escape.png" />
+	  <None Remove="Resources\Images\floppy_disc.png" />
 	  <None Remove="Resources\Images\food.png" />
 	  <None Remove="Resources\Images\food.svg" />
 	  <None Remove="Resources\Images\foods.png" />
@@ -164,23 +175,31 @@
 	  <None Remove="Resources\Images\front.png" />
 	  <None Remove="Resources\Images\gear.png" />
 	  <None Remove="Resources\Images\gear.svg" />
+	  <None Remove="Resources\Images\get_last_blood.png" />
+	  <None Remove="Resources\Images\get_last_red.png" />
+	  <None Remove="Resources\Images\get_last_sugar.png" />
 	  <None Remove="Resources\Images\glucometer.png" />
 	  <None Remove="Resources\Images\glucometer.svg" />
 	  <None Remove="Resources\Images\hands.png" />
+	  <None Remove="Resources\Images\magnifier.png" />
 	  <None Remove="Resources\Images\meal.png" />
 	  <None Remove="Resources\Images\meal.svg" />
 	  <None Remove="Resources\Images\meals.png" />
 	  <None Remove="Resources\Images\meals.svg" />
+	  <None Remove="Resources\Images\minus.png" />
 	  <None Remove="Resources\Images\other.png" />
 	  <None Remove="Resources\Images\other.svg" />
+	  <None Remove="Resources\Images\plus.png" />
 	  <None Remove="Resources\Images\prediction.png" />
 	  <None Remove="Resources\Images\prediction.svg" />
 	  <None Remove="Resources\Images\questionmark.png" />
 	  <None Remove="Resources\Images\recipe.png" />
 	  <None Remove="Resources\Images\recipe.svg" />
+	  <None Remove="Resources\Images\rounding.png" />
 	  <None Remove="Resources\Images\sugar.svg" />
 	  <None Remove="Resources\Images\syringe.png" />
 	  <None Remove="Resources\Images\syringe.svg" />
+	  <None Remove="Resources\Images\total_sugar.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -190,23 +209,38 @@
 	<ItemGroup>
 	  <MauiImage Include="Resources\Images\arms_back.png" />
 	  <MauiImage Include="Resources\Images\back.png" />
+	  <MauiImage Include="Resources\Images\balance.png" />
 	  <MauiImage Include="Resources\Images\calculate_insulin.png" />
 	  <MauiImage Include="Resources\Images\calculator.png" />
 	  <MauiImage Include="Resources\Images\chart.png" />
+	  <MauiImage Include="Resources\Images\choose.png" />
+	  <MauiImage Include="Resources\Images\chronograph_set.png" />
+	  <MauiImage Include="Resources\Images\chronograph_started.png" />
+	  <MauiImage Include="Resources\Images\clear_fields.png" />
+	  <MauiImage Include="Resources\Images\clock.png" />
+	  <MauiImage Include="Resources\Images\details.png" />
+	  <MauiImage Include="Resources\Images\floppy_disc.png" />
 	  <MauiImage Include="Resources\Images\food.png" />
 	  <MauiImage Include="Resources\Images\foods.png" />
 	  <MauiImage Include="Resources\Images\food_to_sugar.png" />
 	  <MauiImage Include="Resources\Images\front.png" />
 	  <MauiImage Include="Resources\Images\gear.png" />
+	  <MauiImage Include="Resources\Images\get_last_blood.png" />
+	  <MauiImage Include="Resources\Images\get_last_sugar.png" />
 	  <MauiImage Include="Resources\Images\glucometer.png" />
 	  <MauiImage Include="Resources\Images\hands.png" />
+	  <MauiImage Include="Resources\Images\magnifier.png" />
 	  <MauiImage Include="Resources\Images\meal.png" />
 	  <MauiImage Include="Resources\Images\meals.png" />
+	  <MauiImage Include="Resources\Images\minus.png" />
 	  <MauiImage Include="Resources\Images\other.png" />
+	  <MauiImage Include="Resources\Images\plus.png" />
 	  <MauiImage Include="Resources\Images\prediction.png" />
 	  <MauiImage Include="Resources\Images\questionmark.png" />
 	  <MauiImage Include="Resources\Images\recipe.png" />
+	  <MauiImage Include="Resources\Images\rounding.png" />
 	  <MauiImage Include="Resources\Images\syringe.png" />
+	  <MauiImage Include="Resources\Images\total_sugar.png" />
 	</ItemGroup>
 
 	<ItemGroup>
